--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-bla bla bla
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GitHub Test Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Hello, GitHub!</h1>
+        <p>This is a simple HTML and CSS test page.</p>
+        <button onclick="alert('It works!')">Click Me</button>
+    </div>
+</body>
+</html>
